@@ -61,19 +61,36 @@ $HTMLOUT .= "
 $HTMLOUT .= "<table class='table table-bordered table-striped top20 bottom20'>
     <tr>
     <td class='rowhead'>{$lang['upload_imdb_url']}</td>
-    <td><input type='text' name='url' class='w-100' /><br>{$lang['upload_imdb_tfi']}{$lang['upload_imdb_rfmo']}</td>
+    <td>
+        <input type='text' id='url' name='url' class='w-100' data-csrf='" . $session->get('csrf_token') . "' /><br>
+        {$lang['upload_imdb_tfi']}{$lang['upload_imdb_rfmo']}
+        <div class='imdb_outer'>
+            <div class='imdb_inner'>
+            </div>
+        </div>
+    </td>
     </tr>
     <tr>
     <td class='rowhead'>{$lang['upload_isbn']}</td>
-    <td><input type='text' name='isbn' class='w-100' /><br>{$lang['upload_isbn_details']}</td>
+    <td>
+        <input type='text' id='isbn' name='isbn' class='w-100' data-csrf='" . $session->get('csrf_token') . "' /><br>
+        {$lang['upload_isbn_details']}
+        <div class='isbn_outer'>
+            <div class='isbn_inner'>
+            </div>
+        </div>
+    </td>
     </tr>
     <tr>
     <td class='rowhead'>{$lang['upload_poster']}</td>
-    <td><input id='poster' type='text' name='poster' class='w-100' /><br>{$lang['upload_poster1']}</td>
+    <td>
+        <input type='text' id='poster' name='poster' class='w-100' />
+        <br>{$lang['upload_poster1']}
+    </td>
     </tr>
     <tr>
     <td class='rowhead'>{$lang['upload_youtube']}</td>
-    <td><input type='text' name='youtube' class='w-100' /><br>({$lang['upload_youtube_info']})</td>
+    <td><input type='text' id='youtube' name='youtube' class='w-100' /><br>({$lang['upload_youtube_info']})</td>
     </tr>
     <tr>
     <td class='rowhead'><b>{$lang['upload_bitbucket']}</b></td>
