@@ -6,23 +6,21 @@ class Torrent
 {
     protected $cache;
     protected $fluent;
+    protected $site_config;
 
     public function __construct()
     {
-        global $fluent, $cache;
+        global $fluent, $cache, $site_config;
 
         $this->fluent = $fluent;
         $this->cache = $cache;
+        $this->site_config = $site_config;
     }
 
-    public function delete_by_id(array $tid)
+    public function delete_by_id(int $tid)
     {
-        if (empty($tid) || !is_array($tid)) {
-            return false;
-        }
-
         $this->fluent->deleteFrom('torrents')
-            ->where('id = ?', $tid['id'])
+            ->where('id = ?', $tid)
             ->execute();
 
         $query = $this->fluent->getPdo()
@@ -30,15 +28,17 @@ class Torrent
                        FROM likes
                        LEFT JOIN comments ON comments.id = likes.comment_id
                        WHERE comments.torrent = ?');
-        $query->bindParam(1, $tid['id']);
+        $query->bindParam(1, $tid);
         $query->execute();
 
         $this->fluent->deleteFrom('coins')
-            ->where('torrentid = ?', $tid['id'])
+            ->where('torrentid = ?', $tid)
             ->execute();
 
         $this->fluent->deleteFrom('rating')
-            ->where('torrent = ?', $tid['id'])
+            ->where('torrent = ?', $tid)
             ->execute();
+
+        unlink("{$this->site_config['torrent_dir']}/{$tid}.torrent");
     }
 }
